# OpenThoughts-Agent

./: .beta9ignore  .gitignore  .gitmodules  CLAUDE.md  README.md  merged_harbor_config_eval-terminal-bench@2.0-claude-haiku-4-5-20251001-20260115_165217.yaml  merged_harbor_config_eval-terminal-bench@2.0-gemini-2.5-flash-20260114_222605.yaml  merged_harbor_config_eval__bfcl__gemini-2.5-flash__20260307_104650.yaml  merged_harbor_config_eval__medagentbench__gpt-5-nano-2025-08-0__20260307_130349.yaml  merged_harbor_config_eval__openthoughts-tblite__gemini-2.5-flash__20260307_091003.yaml  merged_harbor_config_eval__openthoughts-tblite__gpt-5-nano-2025-08-0__20260307_103051.yaml  merged_harbor_config_eval__openthoughts-tblite__gpt-5-nano-2025-08-0__20260307_103328.yaml  pyproject.toml
.claude/: MAP.md
.claude/projects/: single-region-output-migration.md
.github/workflows/: pytest.yml  ruff-format.yml  submodules-nightly.yml
agent_logs/: 2026-06-19_232_cp2_r3_rung.md  2026-06-19_232_cp2_rung.md  2026-06-19_232_derisk_verdict_blocked_on_237.md  2026-06-19_237_ggates_merge.md  2026-06-19_237_sif_rebuild.md  2026-06-19_cp2_forward_dict_ndim_bug.md  2026-06-20_131k_cp_dcp_r3_config.md  2026-06-20_232_cp2_VALIDATED.md  2026-06-20_232_cp2_smoke_gs1_no_kernel.md  2026-06-20_delphi_rl_hparam_retune.md
baselines/coderforge/: README.md  axolotl_retrain_diagnosis.md  axolotl_retrain_diagnosis_coderforge.md  cf_v6_iteration_log.md  convert_coderforge.py  subset_coderforge_v3 copy.py  subset_coderforge_v6.py
baselines/sera/: README.md  axolotl_retrain_diagnosis_sera.md  compliance.md  convert_axolotl_checkpoint.py  convert_sera.py  iterations.md  sera_braces_diagnosis.md  subset_sera_v3 copy.py  subset_sera_v4.py  subset_sera_v8.py
data/: commons.py  run_bespoke_verification.py
data/bespoke/: run_verification.py
data/claude_docker/: generate_freelancer.py  generate_taskmaster.py
data/cloud/: launch_tracegen_cloud.py  launch_tracegen_iris.py
data/code_contests/: generate_with_tests.py
data/codenet_python_v3/: build_v3.py  extract_io.py  match_codenet.py
data/convert_bespoke/: run_bespoke_verification.py
data/frontiersmith/: README_card.md  generate.py  run_judge.py  tau.json
data/generation/: base.py  utils.py
data/github_dockerfiles/: generate_freelancer.py  utils.py
data/inferredbugs/: generate_with_verifier.py  structural_verifier.py
data/local/: run_tracegen.py
data/magicoder/: generate.py
data/nemotron_gym/: __init__.py  adapter.py  run.py  upload_to_hf.py
data/nl2bash/: local_nl2bash.sh  teacher.py
data/nl2bash_sampled_verified/: local_nl2bash.sh  teacher.py
data/openswe/: generate.py
data/patchers/: _stack_php_common.py  patch_exp_flat25_subtle_debug_tasks.py  patch_exp_flat25_subtle_debug_tasks_v3.py  patch_exp_rle_detailed_tasks.py  patch_exp_rle_error_report_tasks.py  patch_exp_rle_error_report_v3_tasks.py  patch_exp_rle_expert_tasks.py  patch_exp_rle_expert_v3_tasks.py  patch_exp_rle_github_issue_tasks.py  patch_exp_rle_minimal_instructions_tasks.py  patch_exp_rpt_crosscodeeval_csharp_tasks.py  patch_exp_rpt_crosscodeeval_csharp_v3_tasks.py  patch_exp_rpt_defects4j_v3_tasks.py  (+35 more)
docker/: Dockerfile.gpu-1x  Dockerfile.gpu-4x  Dockerfile.gpu-8x  Dockerfile.gpu-base  Dockerfile.gpu-rl  Dockerfile.gpu-rl-flashqla-harbor-incr  Dockerfile.gpu-rl-flashqla-incr  Dockerfile.gpu-rl-harbor-incr  Dockerfile.tpu  build_and_push.sh  build_gpu_rl_kaniko.sh  build_tpu_kaniko.sh  rl_env_constraints.txt
docs/: DATASET_GENERATION.md  EVAL_GUIDE.md  RL_PIPELINE.md
eval/: baseline_model_configs.yaml  build_vllm_cmd.sh  check_progress.py  prep_serve_tokenizer.py  resume_chunked.py  unified_eval_harbor.sbatch  unified_eval_listener.py
hpc/: README.md  arg_groups.py  arguments.py  axolotl_config_utils.py  checkpoint_utils.py  cli_utils.py  cloud_launch_utils.py  cloud_sync_utils.py  consolidate_launch_utils.py  core_launch_utils.py  cuda_utils.py  datagen_launch_utils.py  eval_launch_utils.py  eval_listener_launch_utils.py  harbor_utils.py  hf_utils.py  hpc.py  ingress_sidecar.py  ingress_utils.py  iris_fetch_daemon.py  iris_job_registry.py  iris_launch_utils.py  job_name_ignore_list.py  launch.py  launch_utils.py  literal_proxy_utils.py  local_paths.py  local_runner_utils.py  model_config_apply.py  pinggy_utils.py  ray_utils.py  resume_manager.py  rl_config_utils.py  rl_launch_utils.py  rl_requirements.txt  sbatch_data_requirements.json  setup_rl_env.sh  sft_launch_utils.py  snapshot_manager.py  upload.py  (+1 more)
model_config/: README.md  _patterns.yaml  resolver.py
prm/: __init__.py  teacher_hint.py
results/: a1-nemotron_rspec_OR_matrix.csv  a1-pymethods2test_OR_matrix.csv  nemotron_bash_OR_matrix.csv
rl/: __init__.py
schema/: models
scripts/: README.md  gen_only_delphi.py  generate_eval_registry.py  migrate_eval_registry.py
tests/: TESTS.md  conftest.py
(+6653 files in other folders)
